<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_3sdp"
    android:layout_marginTop="@dimen/_3sdp"
    android:layout_marginEnd="@dimen/_3sdp"
    android:layout_marginBottom="@dimen/_3sdp"
    android:background="@color/colorWhiteOff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:elevation="@dimen/_3sdp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/ic_launcher" />

                <app.android.movieslist.utils.custom_views.CustomTextView
                    android:id="@+id/tv_MovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/str_movie_name"
                    android:textColor="@color/colorLiteBlack"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <app.android.movieslist.utils.custom_views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/str_about_film"
                android:textColor="@color/colorLiteBlack"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <app.android.movieslist.utils.custom_views.CustomTextView
                android:id="@+id/tv_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/str_about_film"
                android:textColor="@color/colorLiteBlack"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal" />

            <app.android.movieslist.utils.custom_views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/str_director"
                android:textColor="@color/colorLiteBlack"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <app.android.movieslist.utils.custom_views.CustomTextView
                android:id="@+id/tv_Director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_user_dir"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/str_director"
                android:textColor="@color/colorLiteBlack"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal" />

            <app.android.movieslist.utils.custom_views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/str_producer"
                android:textColor="@color/colorLiteBlack"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <app.android.movieslist.utils.custom_views.CustomTextView
                android:id="@+id/tv_producer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_user_dir"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/str_producer"
                android:textColor="@color/colorLiteBlack"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <app.android.movieslist.utils.custom_views.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_released_date"
                        android:textColor="@color/colorLiteBlack"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <app.android.movieslist.utils.custom_views.CustomTextView
                        android:id="@+id/tv_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/str_released_date"
                        android:textColor="@color/colorLiteBlack"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <app.android.movieslist.utils.custom_views.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_rate_score"
                        android:textColor="@color/colorLiteBlack"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <app.android.movieslist.utils.custom_views.CustomTextView
                        android:id="@+id/tv_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:drawableStart="@drawable/ic_star"
                        android:drawablePadding="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/str_released_date"
                        android:textColor="@color/colorLiteBlack"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_people"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_people" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_locations"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_location" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_vehicles"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_car" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_species"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_species" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
