...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        style="@style/HeaderBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize" />

                </LinearLayout>

...
